Mutators: Split AndOr mutator into AndToOr and OrToAnd
Also split tests and fixtures accordingly.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,6 +14,7 @@ set(mull_sources
   Parallelization/Tasks/LoadBitcodeFromBinaryTask.cpp
 
   Mutators/AndOrReplacementMutator.cpp
+  Mutators/OrAndReplacementMutator.cpp
   Mutators/MutatorsFactory.cpp
   Mutators/NegateConditionMutator.cpp
   Mutators/RemoveVoidFunctionMutator.cpp
