--- a/tests/fixtures/mutators/CMakeLists.txt
+++ b/tests/fixtures/mutators/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_subdirectory(and_or_replacement)
-add_subdirectory(and_or_replacement_cpp)
+add_subdirectory(and_or)
 add_subdirectory(bitwise)
 add_subdirectory(boundary)
 add_subdirectory(math_add)
