--- a/tests/fixtures/mutators/math/CMakeLists.txt
+++ b/tests/fixtures/mutators/math/CMakeLists.txt
@@ -3,3 +3,9 @@ compile_fixture(
   OUTPUT_EXTENSION bc
   FLAGS -g -c -emit-llvm
 )
+
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/unary_minus.cpp
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm
+)
