LIT integration tests: boilerplate and the first test

--- a/infrastructure/macos-playbook.yaml
+++ b/infrastructure/macos-playbook.yaml
@@ -59,6 +59,9 @@
     - name: Build Mull
       include: helpers/build-mull.yaml
 
+    - name: LIT Tests
+      include: helpers/lit-tests.yaml
+
     - name: Integration Tests
       include: helpers/integration-tests.yaml
 
