--- a/infrastructure/helpers/download-llvm.yaml
+++ b/infrastructure/helpers/download-llvm.yaml
@@ -3,6 +3,7 @@
   get_url:
     url: "{{ llvm_url }}"
     dest: "{{ working_dir }}/{{ llvm_version }}.tar.gz"
+    timeout: 30
   register: download_llvm
 
 - name: Extract LLVM ({{ llvm_version }})
