Some vagrant fixes and improvements

--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -5,8 +5,8 @@ Vagrant.require_version ">= 1.7.0"
 
 def configure_vm(name, config)
   config.vm.provider "virtualbox" do |v|
-    v.memory = 4096
-    v.cpus = 2
+    v.memory = ENV['VM_MEM'].to_i || 4096
+    v.cpus = ENV['VM_CPU'].to_i || 2
     v.name = "mull-#{name}"
   end
 end
@@ -121,6 +121,7 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '8.0.0',
         gitref: ENV['GITREF'] || 'master',
+        SDKROOT: '/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk',
       }
     end
 
