--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,6 +199,7 @@ add_subdirectory(LLVMCompatibility/${LLVM_COMPATIBILITY_DIR})
 add_subdirectory(lib)
 add_subdirectory(tools)
 add_subdirectory(tests)
+add_subdirectory(tests-lit)
 add_subdirectory(vendor/googletest)
 add_subdirectory(vendor/libirm)
 add_subdirectory(docs)
