--- a/infrastructure/helpers/lit-tests.yaml
+++ b/infrastructure/helpers/lit-tests.yaml
@@ -3,13 +3,15 @@
   pip:
     name:
       - lit==0.9.0
-      - filecheck==0.0.7
+      - filecheck==0.0.11
     executable: pip3
 
-- name: Run LIT tests
-  make:
-    chdir: "{{ source_dir }}/tests-lit"
-    target: test
-    params:
-      PWD: "{{ source_dir }}/tests-lit"
-      CLANG_EXEC: "{{ llvm_dir }}/bin/clang++"
+- name: Run LIT tests (Debug)
+  command: ninja tests-lit
+  args:
+    chdir: "{{ debug_build_dir }}"
+
+- name: Run LIT tests (Release)
+  command: ninja tests-lit
+  args:
+    chdir: "{{ release_build_dir }}"
