tests-lit: enable conditional flag that toggles LLVM >= 8

--- a/tests-lit/CMakeLists.txt
+++ b/tests-lit/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LIT_EXEC lit)
 set(FILECHECK_EXEC filecheck)
 
 set(LIT_COMMAND
+  LLVM_VERSION_MAJOR=${LLVM_VERSION_MAJOR}
   CURRENT_DIR=${CMAKE_CURRENT_SOURCE_DIR}
   MULL_EXEC=$<TARGET_FILE:mull-cxx>
   CLANG_EXEC=${CLANG_EXEC}
