--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -9,6 +9,8 @@ current_dir = os.environ.get('CURRENT_DIR', '')
 clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
+llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
+assert llvm_major_version
 
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
@@ -16,3 +18,10 @@ config.substitutions.append(('%MULL_EXEC', mull_exec))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 
 config.suffixes = ['.cpp']
+
+class MullConfig():
+    llvm_8_or_higher = False
+    def __init__(self, llvm_8_or_higher):
+        self.llvm_8_or_higher = llvm_8_or_higher
+
+config.mull = MullConfig(int(llvm_major_version) >= 8)
