ASTMutationStorage: store more AST information about the mutations

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(Mutators/CXX)
 add_subdirectory(Diagnostics)
 
 set(mull_sources
+  AST/ASTMutationStorage.cpp
   Driver.cpp
   Sandbox/ProcessSandbox.cpp
   BitcodeLoader.cpp
