"White" AST search: Add to Sub mutation

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,12 @@ add_subdirectory(Mutators/CXX)
 add_subdirectory(Diagnostics)
 
 set(mull_sources
+  AST/ASTFinder.cpp
+  AST/ASTMutationFilter.cpp
   AST/ASTMutationStorage.cpp
+  AST/ASTSearchTask.cpp
+  AST/ASTVisitor.cpp
+
   Driver.cpp
   Sandbox/ProcessSandbox.cpp
   BitcodeLoader.cpp
