--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -1,4 +1,12 @@
+import re
+
 import lit.formats
+
+# The paths passed by CMake as env variables to LIT get escaped so we have to
+# undo it to pass it down to the LIT tests.
+# Example: "-isystem\ /opt/llvm-3.9.0/include/c++/v1 ..."
+def unescape_string(string):
+    return re.sub(r'\\ ', ' ', string)
 
 config.name = "Mull integration tests"
 config.test_format = lit.formats.ShTest("0")
@@ -9,13 +17,22 @@ current_dir = os.environ.get('CURRENT_DIR', '')
 clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
+llvm_path = os.environ.get('PATH_TO_LLVM', '')
 llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
+test_cxx_flags = os.environ.get('TEST_CXX_FLAGS', '')
+
+assert llvm_path
 assert llvm_major_version
+assert test_cxx_flags
+
+test_cxx_flags = unescape_string(test_cxx_flags)
 
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
 config.substitutions.append(('%MULL_EXEC', mull_exec))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
+config.substitutions.append(('%LLVM_PATH', llvm_path))
+config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
 
 config.suffixes = ['.cpp']
 
