--- a/.github/workflows/ci-ubuntu-16.yml
+++ b/.github/workflows/ci-ubuntu-16.yml
@@ -1,47 +1,88 @@
 name: CI Ubuntu 16.04
 
-on: [pull_request]
+env:
+  BINTRAY_REPO: "ubuntu-16"
+  LLVM_RELEASE: "8.0"
+
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+  release:
+    types:
+      - created
 
 jobs:
   test:
-    name: LLVM 8.0.0
+    name: LLVM ${{ matrix.LLVM_VERSION }}
     runs-on: ubuntu-latest
     container: ubuntu:16.04
+    strategy:
+      matrix:
+        LLVM_VERSION: ["8.0"]
 
     steps:
       - uses: actions/checkout@v1
         with:
           submodules: true
-      - name: Detect Mull version
-        id: version
+      - name: For debugging
         run: |
           env | sort
-          grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '
-          grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '
-          echo ::set-output name=version::`grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '`.`grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '`
       - name: Install software
         run: |
-          apt-get update && apt-get install -y python-pip curl
+          apt-get update && apt-get install -y python-pip curl git
           pip install ansible
+      - name: Set build settings
+        id: settings
+        run: |
+          echo ::set-output name=version::`grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '`
+
+          case $GITHUB_EVENT_NAME in
+            "pull_request")
+              echo ::set-output name=suffix::-pr`grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '`
+              echo ::set-output name=package::mull-nightly
+              echo ::set-output name=channel::nightly
+            ;;
+            "push")
+              echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
+              echo ::set-output name=package::mull-nightly
+              echo ::set-output name=channel::nightly
+            ;;
+            "release")
+              echo ::set-output name=suffix::""
+              echo ::set-output name=package::mull
+              echo ::set-output name=channel::stable
+              if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
+              then
+                false
+              fi
+            ;;
+          esac
+      - name: Patch 3.9/4.0
+        if: matrix.LLVM_VERSION == '3.9' || matrix.LLVM_VERSION == '4.0'
+        run: |
+          ln -s /usr/include/locale.h /usr/include/xlocale.h
       - name: Run CI task
         run: |
           cd infrastructure && \
           ansible-playbook ubuntu-playbook.yaml \
-            -e llvm_version="8.0.0" \
+            -e llvm_version="${{ matrix.LLVM_VERSION }}.0" \
             -e source_dir=$PWD/.. \
             -e gitref=$GITHUB_SHA \
             -e host=localhost \
-            -e mull_version=${{ steps.version.outputs.version }} \
+            -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
             --verbose
       - name: Publish package
+        if: matrix.LLVM_VERSION == env.LLVM_RELEASE
         run: |
           curl --silent --show-error --location --request DELETE \
             --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
-            "https://api.bintray.com/packages/mull-project/ubuntu-16/mull-nightly/versions/${{ steps.version.outputs.version }}"
+            "https://api.bintray.com/packages/mull-project/${{ env.BINTRAY_REPO }}/${{ steps.settings.outputs.package }}/versions/${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }}"
           curl --silent --show-error --fail --location --request PUT \
             --upload-file infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb \
             --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
-            -H "X-Bintray-Debian-Distribution: nightly" \
+            -H "X-Bintray-Debian-Distribution: ${{ steps.settings.outputs.channel }}" \
             -H "X-Bintray-Debian-Component: main" \
             -H "X-Bintray-Debian-Architecture: amd64" \
-            "https://api.bintray.com/content/mull-project/ubuntu-16/mull-nightly/${{ steps.version.outputs.version }}/pool/main/m/`cat infrastructure/PACKAGE_FILE_NAME`.deb;publish=1"
+            "https://api.bintray.com/content/mull-project/${{ env.BINTRAY_REPO }}/${{ steps.settings.outputs.package }}/${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }}/pool/main/m/`cat infrastructure/PACKAGE_FILE_NAME`.deb;publish=1"
