ASTVisitor: "add to sub" unit test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,8 @@ add_subdirectory(fixtures)
 generate_fixture_factory(FACTORY_HEADER)
 
 set(mull_unittests_sources
+  AST/ASTVisitor/ASTVisitor_Arithmetics_Tests.cpp
+
   CompilerTests.cpp
   DriverTests.cpp
   ProcessSandboxTest.cpp
