Decrease package/binary size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,7 +202,7 @@ add_subdirectory(lib)
 add_subdirectory(tools)
 add_subdirectory(tests)
 add_subdirectory(tests-lit)
-add_subdirectory(vendor/googletest)
-add_subdirectory(vendor/libirm)
-add_subdirectory(vendor/spdlog)
+add_subdirectory(vendor/googletest EXCLUDE_FROM_ALL)
+add_subdirectory(vendor/libirm EXCLUDE_FROM_ALL)
+add_subdirectory(vendor/spdlog EXCLUDE_FROM_ALL)
 add_subdirectory(docs)
