ASTVisitor: recognize logical AND-OR and OR-AND

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(mull_unittests_sources
   AST/ASTVisitor/ASTVisitor_BitwiseAssignment_Tests.cpp
   AST/ASTVisitor/ASTVisitor_Boundary_Tests.cpp
   AST/ASTVisitor/ASTVisitor_Comparison_Tests.cpp
+  AST/ASTVisitor/ASTVisitor_Logical_Tests.cpp
 
   CompilerTests.cpp
   DriverTests.cpp
