--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -9,9 +9,8 @@ on:
   push:
     branches:
       - master
-  release:
-    types:
-      - created
+    tags:
+      - "**"
 
 jobs:
   test:
@@ -29,6 +28,9 @@ jobs:
       - name: For debugging
         run: |
           env | sort
+      - name: For debugging
+        run: |
+          cat $GITHUB_EVENT_PATH
       - name: Install software
         run: |
           apt-get update && apt-get install -y python-pip curl git
@@ -45,18 +47,28 @@ jobs:
               echo ::set-output name=channel::nightly
             ;;
             "push")
-              echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
-              echo ::set-output name=package::mull-nightly
-              echo ::set-output name=channel::nightly
+              case $GITHUB_REF in
+                "refs/heads/"*)
+                  echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
+                  echo ::set-output name=package::mull-nightly
+                  echo ::set-output name=channel::nightly
+                ;;
+                "refs/tags/"*)
+                  echo ::set-output name=suffix::""
+                  echo ::set-output name=package::mull
+                  echo ::set-output name=channel::stable
+                  if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
+                  then
+                    false
+                  fi
+                ;;
+                *)
+                  false
+                ;;
+              esac
             ;;
-            "release")
-              echo ::set-output name=suffix::""
-              echo ::set-output name=package::mull
-              echo ::set-output name=channel::stable
-              if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
-              then
-                false
-              fi
+            *)
+              false
             ;;
           esac
       - name: Patch 3.9/4.0
