ASTVisitor: recognize scalars in return statements

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ set(mull_unittests_sources
 
   Mutations-E2E/Mutation_Arithmetic_Add_Test.cpp
   Mutations-E2E/CXX/RemoveNegationTest.cpp
+  Mutations-E2E/Scalar/01_Mutation_Scalar_ReturnValue_Test.cpp
 
   CompilerTests.cpp
   DriverTests.cpp
