--- a/tests/fixtures/mutators/CMakeLists.txt
+++ b/tests/fixtures/mutators/CMakeLists.txt
@@ -12,4 +12,5 @@ add_subdirectory(rem_to_div)
 add_subdirectory(replace_assignment)
 add_subdirectory(replace_call)
 add_subdirectory(scalar_value)
+add_subdirectory(remove_negation)
 
