--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -1,3 +1,4 @@
+import platform
 import re
 
 import lit.formats
@@ -7,6 +8,20 @@ import lit.formats
 # Example: "-isystem\ /opt/llvm-3.9.0/include/c++/v1 ..."
 def unescape_string(string):
     return re.sub(r'\\ ', ' ', string)
+
+def get_os_filename_string():
+    if platform.system() == 'Darwin':
+        return "macOS"
+    if platform.system() == 'Linux':
+        return "Linux"
+    print("error: lit.cfg could not detect OS")
+    return "Unknown"
+
+def get_mull_portable_flags():
+    if get_os_filename_string() == 'Linux':
+        return '-ld-search-path=/usr/lib/x86_64-linux-gnu -ld-search-path=/lib/x86_64-linux-gnu'
+
+    return ''
 
 config.name = "Mull integration tests"
 config.test_format = lit.formats.ShTest("0")
@@ -27,9 +42,11 @@ assert test_cxx_flags
 
 test_cxx_flags = unescape_string(test_cxx_flags)
 
+portable_mull_exec = "{} {}".format(mull_exec, get_mull_portable_flags()).rstrip()
+
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
-config.substitutions.append(('%MULL_EXEC', mull_exec))
+config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
