ASTVisitor: recognize scalars in variable declarations

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ set(mull_unittests_sources
   Mutations-E2E/CXX/RemoveNegationTest.cpp
   Mutations-E2E/Scalar/01_Mutation_Scalar_ReturnValue_Test.cpp
   Mutations-E2E/Scalar/02_Mutation_Scalar_BinaryOperand_Test.cpp
+  Mutations-E2E/Scalar/03_Mutation_Scalar_VariableDeclaration_Test.cpp
 
   CompilerTests.cpp
   DriverTests.cpp
