lit.cfg: specify -ld-search-path=<path to llvm> on Linux

--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -17,11 +17,18 @@ def get_os_filename_string():
     print("error: lit.cfg could not detect OS")
     return "Unknown"
 
-def get_mull_portable_flags():
-    if get_os_filename_string() == 'Linux':
-        return '-ld-search-path=/usr/lib/x86_64-linux-gnu -ld-search-path=/lib/x86_64-linux-gnu'
+def get_mull_portable_exec(llvm_path):
+    components = [ mull_exec ]
 
-    return ''
+    if get_os_filename_string() == 'Linux':
+        linux_env = 'LD_LIBRARY_PATH={}/lib'.format(llvm_path)
+        linux_flags = '-ld-search-path={}/lib -ld-search-path=/usr/lib/x86_64-linux-gnu -ld-search-path=/lib/x86_64-linux-gnu'.format(llvm_path)
+
+        components.insert(0, linux_env)
+        components.append(linux_flags)
+
+    return ' '.join(components)
+
 
 config.name = "Mull integration tests"
 config.test_format = lit.formats.ShTest("0")
@@ -42,7 +49,7 @@ assert test_cxx_flags
 
 test_cxx_flags = unescape_string(test_cxx_flags)
 
-portable_mull_exec = "{} {}".format(mull_exec, get_mull_portable_flags()).rstrip()
+portable_mull_exec = get_mull_portable_exec(llvm_path)
 
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
