Fix macOS build failure caused by pkg-config + sqlite3
This breaks FreeBSD builds (see https://github.com/mull-project/mull/issues/401),
but the FreeBSD builds are already broken...

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -170,7 +170,7 @@ find_package(Threads REQUIRED)
 
 target_link_libraries(mull
   ${MULL_LLVM_LIBRARIES}
-  ${SQLITE_DEPENDENCY}
+  sqlite3
   clangTooling
   Threads::Threads
   irm
