--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,79 @@
-language: cpp
-compiler: clang
 sudo: required
-
+language: cpp
+osx_image: xcode11.3
 os:
-- linux
-- osx
+  - osx
 
-dist: xenial
+git:
+  depth: false
+
+branches:
+  only:
+    - master
+    - /^\d+\.\d+\.\d+$/
 
 env:
-- LLVM_VERSION=3.9
-- LLVM_VERSION=4.0
-- LLVM_VERSION=5.0
-- LLVM_VERSION=6.0
-- LLVM_VERSION=7.0
-- LLVM_VERSION=8.0
+  - LLVM_VERSION=3.9
+  - LLVM_VERSION=4.0
+  - LLVM_VERSION=5.0
+  - LLVM_VERSION=6.0
+  - LLVM_VERSION=7.0
+  - LLVM_VERSION=8.0
+  - LLVM_VERSION=9.0
 
-before_install:
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then sudo easy_install pip && sudo pip install ansible; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then sudo pip install ansible; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test && sudo apt-get update; fi
+before_script:
+  - |
+    export version=`grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '`
 
-# Build steps
+    case $TRAVIS_EVENT_TYPE in
+      "pull_request")
+        export suffix=-pr$TRAVIS_PULL_REQUEST
+        export package=mull-nightly
+        export channel=nightly
+      ;;
+      "push")
+        if [ "$TRAVIS_TAG-" != "-" ];
+        then
+          export suffix=""
+          export package=mull
+          export channel=stable
+          if [ $TRAVIS_TAG != $version ];
+          then
+            echo "Building only those tags that match the actual version"
+            false
+          fi
+        else
+          export suffix=-trunk`git rev-list HEAD --count`
+          export package=mull-nightly
+          export channel=nightly
+        fi
+      ;;
+      *)
+        false
+      ;;
+    esac
+
 script:
-- if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then cd infrastructure && ansible-playbook macos-playbook.yaml -e llvm_version=$LLVM_VERSION.0 -e source_dir=$PWD/.. -e gitref=$TRAVIS_COMMIT -e host=localhost -e skip_package=true --verbose; fi
-- if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then cd infrastructure && ansible-playbook ubuntu-playbook.yaml -e llvm_version=$LLVM_VERSION.0 -e source_dir=$PWD/.. -e gitref=$TRAVIS_COMMIT -e host=localhost --verbose; fi
-
+  - |
+    pip install ansible
+    cd infrastructure && \
+    ansible-playbook macos-playbook.yaml \
+      -e llvm_version="$LLVM_VERSION.0" \
+      -e source_dir=$PWD/.. \
+      -e gitref=$TRAVIS_COMMIT \
+      -e host=localhost \
+      -e SDKROOT=`xcrun -show-sdk-path` \
+      -e mull_version=$version$suffix \
+      --verbose
+    if [ $LLVM_VERSION == 9.0 ];
+    then
+      pwd
+      ls
+      curl --silent --show-error --location --request DELETE \
+            --user "alexdenisov:$BINTRAY_API_KEY" \
+            "https://api.bintray.com/packages/mull-project/macos/$package/versions/$version$suffix"
+      curl --silent --show-error --fail --location --request PUT \
+        --upload-file packages/`cat PACKAGE_FILE_NAME`.zip \
+        --user "alexdenisov:$BINTRAY_API_KEY" \
+        "https://api.bintray.com/content/mull-project/macos/$package/$version$suffix/`cat PACKAGE_FILE_NAME`.zip;publish=1"
+    fi
