Simplify lit-tests

--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -60,9 +60,5 @@ config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
 
 config.suffixes = ['.cpp']
 
-class MullConfig():
-    llvm_8_or_higher = False
-    def __init__(self, llvm_8_or_higher):
-        self.llvm_8_or_higher = llvm_8_or_higher
-
-config.mull = MullConfig(int(llvm_major_version) >= 8)
+if int(llvm_major_version) >= 8:
+  config.available_features.add('LLVM_8_OR_HIGHER')
