--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -56,7 +56,7 @@ set(mull_sources
 
   IDEDiagnostics.cpp
 
-  Metrics/Metrics.cpp
+  Metrics/MetricsMeasure.cpp
 
   JunkDetection/CXX/CXXJunkDetector.cpp
 
@@ -64,7 +64,6 @@ set(mull_sources
   Reporters/SourceCodeReader.cpp
   Reporters/SourceManager.cpp
   Reporters/SQLiteReporter.cpp
-  Reporters/TimeReporter.cpp
 
   SourceLocation.cpp
 
