--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -22,7 +22,13 @@ jobs:
         LLVM_VERSION: ["3.9", "4.0", "5.0", "6.0", "7.0", "8.0", "9.0"]
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Install software
+        run: |
+          apt-get update && apt-get install -y software-properties-common
+          add-apt-repository ppa:git-core/ppa
+          apt-get update && apt-get install -y python-pip curl git
+          pip install ansible
+      - uses: actions/checkout@v2
         with:
           submodules: true
       - name: For debugging
@@ -31,10 +37,6 @@ jobs:
       - name: For debugging
         run: |
           cat $GITHUB_EVENT_PATH
-      - name: Install software
-        run: |
-          apt-get update && apt-get install -y python-pip curl git
-          pip install ansible
       - name: Set build settings
         id: settings
         run: |
