TestFrameworks: Add Boost.Test support for discovering test cases

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -48,6 +48,8 @@ set(mull_sources
   ReachableFunction.cpp
 
 
+  TestFrameworks/BoostTest/BoostTestFinder.cpp
+
   TestFrameworks/SimpleTest/SimpleTestFinder.cpp
 
   TestFrameworks/GoogleTest/GoogleTestFinder.cpp
