--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -3,6 +3,7 @@ name: CI Ubuntu 18.04
 env:
   BINTRAY_REPO: "ubuntu-18"
   LLVM_RELEASE: "9.0"
+  CHECK_SECRETS: ${{ secrets.BINTRAY_API_KEY }}
 
 on:
   pull_request:
@@ -88,7 +89,7 @@ jobs:
             -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
             --verbose
       - name: Publish package
-        if: matrix.LLVM_VERSION == env.LLVM_RELEASE
+        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CHECK_SECRETS != null
         run: |
           curl --silent --show-error --location --request DELETE \
             --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
