Added CppUTest tests

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "vendor/cpputest"]
+	path = vendor/cpputest
+	url = https://github.com/cpputest/cpputest.git
