--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,7 +67,8 @@ set(mull_unittests_sources
 
 get_filename_component(factory_include_dir ${FACTORY_HEADER} DIRECTORY)
 
-add_executable(mull-tests EXCLUDE_FROM_ALL ${mull_unittests_sources})
+add_executable(mull-tests ${mull_unittests_sources})
+add_test(NAME mull-tests COMMAND mull-tests)
 target_link_libraries(mull-tests
   mull
   google-test
