--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -20,7 +20,7 @@ jobs:
     container: ubuntu:18.04
     strategy:
       matrix:
-        LLVM_VERSION: ["3.9", "4.0", "5.0", "6.0", "7.0", "8.0", "9.0", "10.0"]
+        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0"]
 
     steps:
       - name: Install software
@@ -74,10 +74,6 @@ jobs:
               false
             ;;
           esac
-      - name: Patch 3.9/4.0
-        if: matrix.LLVM_VERSION == '3.9' || matrix.LLVM_VERSION == '4.0'
-        run: |
-          ln -s /usr/include/locale.h /usr/include/xlocale.h
       - name: Run CI task
         run: |
           cd infrastructure && \
